--- a/config/database.yml
+++ b/config/database.yml
@@ -1,13 +1,17 @@
 development:
   adapter: postgresql
-  database: starter_project_dev
+  database: expert_advice_dev
   host: localhost
+  username: <%= ENV['DB_USERNAME'] %>
+  password: <%= ENV['DB_PASSWORD'] %>
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   timeout: 5000
 
 test:
   adapter: postgresql
-  database: starter_project_test
-  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+  database: expert_advice_test
   host: localhost
+  username: <%= ENV['DB_USERNAME'] %>
+  password: <%= ENV['DB_PASSWORD'] %>
+  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   min_messages: WARNING
